--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Article preview component</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="main_container">
+      <div class="card_section">
+        <img src="./images/drawers.jpg" alt="main_img" class="cover_img">
+        <div class="card_details">
+          <p class="card_title">
+            Shift the overall look and feel by adding these wonderful
+            touches to furniture in your home
+          </p>
+          <p class="card_description">
+            Ever been in a room and felt like something was missing?
+            Perhaps it felt slightly bare and uninviting. I’ve got some
+            simple tips to help you make any room feel complete.
+          </p>
+          <div class="card_author">
+            <img src="./images/avatar-michelle.jpg" alt="profile" class="author_profile">
+            <div class="author_details">
+              <p class="author_name">Michelle Appleton</p>
+              <p class="author_date">28 Jun 2020</p>
+            </div>
+            <img src="./images/icon-share.svg" alt="share" class="share_icon">
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
