--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
 
 <body>
   <main>
-    <div class="main_container">
-      <div class="card_section">
+    <div class="card_section">
+      <div class="image_container">
         <img src="./images/drawers.jpg" alt="main_img" class="cover_img">
-        <div class="card_details">
-          <p class="card_title">
-            Shift the overall look and feel by adding these wonderful
-            touches to furniture in your home
-          </p>
-          <p class="card_description">
-            Ever been in a room and felt like something was missing?
-            Perhaps it felt slightly bare and uninviting. I’ve got some
-            simple tips to help you make any room feel complete.
-          </p>
-          <div class="card_author">
-            <img src="./images/avatar-michelle.jpg" alt="profile" class="author_profile">
-            <div class="author_details">
-              <p class="author_name">Michelle Appleton</p>
-              <p class="author_date">28 Jun 2020</p>
-            </div>
-            <img src="./images/icon-share.svg" alt="share" class="share_icon">
+      </div>
+      <div class="card_details">
+        <p class="card_title">
+          Shift the overall look and feel by adding these wonderful
+          touches to furniture in your home
+        </p>
+        <p class="card_description">
+          Ever been in a room and felt like something was missing?
+          Perhaps it felt slightly bare and uninviting. I’ve got some
+          simple tips to help you make any room feel complete.
+        </p>
+        <div class="card_author">
+          <img src="./images/avatar-michelle.jpg" alt="profile" class="author_profile">
+          <div class="author_details">
+            <p class="author_name">Michelle Appleton</p>
+            <p class="author_date">28 Jun 2020</p>
           </div>
+          <img src="./images/icon-share.svg" alt="share" class="share_icon">
         </div>
       </div>
     </div>
+
   </main>
 </body>
 
