--- a/index.html
+++ b/index.html
@@ -28,18 +28,27 @@
           Perhaps it felt slightly bare and uninviting. I’ve got some
           simple tips to help you make any room feel complete.
         </p>
+
         <div class="card_author">
           <img src="./images/avatar-michelle.jpg" alt="profile" class="author_profile">
           <div class="author_details">
             <p class="author_name">Michelle Appleton</p>
             <p class="author_date">28 Jun 2020</p>
           </div>
-          <img src="./images/icon-share.svg" alt="share" class="share_icon">
+          <div class="share">
+            <img src="./images/icon-share.svg" alt="share" class="share_icon" id="share-icon">
+          </div>
+          <div class="share_links">
+            <span>Share</span>
+            <a href="#" aria-label="facebook page"><img src="./images/icon-facebook.svg" alt="facebook icon"></a>
+            <a href="#" aria-label="twitter page"><img src="./images/icon-twitter.svg" alt="twitter icon"></a>
+            <a href="#" aria-label="pinterest page"><img src="./images/icon-pinterest.svg" alt="pinterest icon"></a>
+          </div>
         </div>
       </div>
     </div>
-
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
